# viso-netskope

./: .pre-commit-config.yaml  Dockerfile.package  Dockerfile.test  LICENSE  README.md  RELEASE-NOTES.md  package.json  pyproject.toml  tarball-exclude
.github/workflows/: pr-title.yml  publish-release.yml  test.yml
are-plugin/: .dockerignore  Dockerfile.package  Dockerfile.test  pyproject.toml  tarball-exclude
are-plugin/are_plugin/: README.md  __init__.py  are.py  main.py  manifest.json  netskope_model.py  proto.py
are-plugin/are_plugin/client/: model.py  util.py
are-plugin/are_plugin/netskope_mock/: are.py
are-plugin/docs/: README.md
are-plugin/tests/: test_are_plugin.py
are_plugin/: README.md  __init__.py  are.py  main.py  manifest.json  netskope_model.py  proto.py  url.py
are_plugin/client/: model.py  util.py
are_plugin/netskope_mock/: are.py
docs/: README.md
integration/: test_plugin.py
scratch_are_plugin/: README.md  main.py  manifest.json
tests/: test_are_plugin.py
