[tool.poetry]
name = "are_plugin"
version = "0.3.0"
description = ""
authors = ["Moe A <moe.aboulkheir@visotrust.com>"]

[tool.poetry.group.main.dependencies]
python = ">=3.9"
requests-futures = "^1.0.0"
typing-extensions = "^4.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "6.2.5"
pytest-asyncio = "^0.15.1"
mypy = "^1.2.0"

[tool.poetry.group.local.dependencies]
pydantic = "1.8.2"
requests = "2.29.0"

[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"
