[tool.poetry]
name = "are_plugin"
version = "0.0.1"
description = ""
authors = ["Moe A <moe.aboulkheir@visotrust.com>"]

[tool.poetry.dependencies]
python = "==3.9.16"
pydantic = {version = "1.8.2"}
requests-futures = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
