[tool.poetry]
name = "are_plugin"
version = "0.0.1"
description = ""
authors = ["Moe A <moe.aboulkheir@visotrust.com>"]

[tool.poetry.group.main.dependencies]
python = "3.9.*"
requests-futures = "^1.0.0"
typing-extensions = "^4.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^5.4.1"
pytest-asyncio = "^0.15.1"
mypy = "^1.2.0"

[tool.poetry.group.local.dependencies]
pydantic = "1.8.2"
requests = "2.5.0"

[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"
